# development-env-as-code

./: .env.template  .gitignore  README.md  Taskfile.yml  pyproject.toml
.devcontainer/: .p10k.zsh  Dockerfile  devcontainer.json  docker-compose.yml
.docker/: Dockerfile  docker-compose.yml
sample_app/api/: app.py  asgi.py  lifespan.py  settings.py
sample_app/api/sample/: router.py
