[tool.poetry]
name = "Devcontainer"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
fastapi = {extras = ["standard"], version = "^0.133.1"}
uvicorn = {extras = ["standard"], version = "^0.41.0"}

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
ruff = "^0.15.2"